# TheseusOS

./: .gdb_history  .gitignore  1cd  AGENTS.md  BUILD.md  CODE_IMPROVEMENT_RECOMMENDATIONS.md  Cargo.toml  DRIVER_OUTPUT.md  LICENSE  MONITOR_USAGE.md  Makefile  PR_HEXDUMP.md  README.md  TEMPORARY_HEAP_SYSTEM.md  WORKSPACE_SETUP.md  debug.gdb  linker.ld  monitor_input.txt  run_tests.sh  rust-toolchain.toml  startQemu.sh  test_monitor.sh  x86_64-theseus.json  x86_64-unknown-uefi-dwarf.json
.cargo/: config.toml
.cursor/rules/: uefi-rs-docs.mdc
bootloader/: Cargo.toml
bootloader/src/: acpi.rs  boot_sequence.rs  display.rs  hardware.rs  kernel_loader.rs  main.rs  memory.rs  qemu_exit.rs  serial.rs  system_info.rs  virtual_memory.rs
bootloader/src/drivers/: manager.rs  mod.rs  qemu_debug.rs  raw_serial.rs  uefi_serial.rs
docs/: .TODO.md.kate-swp  DOCUMENTATION.md  MEMORY_LAYOUT.md  MONITOR_IMPLEMENTATION.md  TESTING.md  TODO.md  UEFI_RUNTIME_SERVICES.md  WOZMON_SERIAL_MONITOR.md  _inventory.md  agent-prompt-template.md  boot-sequence.md  bootstrap-status.md  development-and-debugging.md  driver-systems-deep-dive.md  hardware-and-drivers.md  hardware-inventory.md  index.md  kernel-architecture.md  kernel-monitor.md  logging.md  map.md  memory-management.md  memory_manager_review.md  openclaw-heartbeat-and-tests.md  overview.md  plan-conventions.md  qemu-io-relays.md  qemu-runner.md  roadmap.md  serial-driver.md  serial-monitor-complete-guide.md  uefi.0.28.main.rs
docs/archive/: DOCUMENTATION_SUMMARY.md  DRIVERS_MVP.md  DRIVER_OUTPUT.md  TEMPORARY_HEAP_SYSTEM.md  VIRTUAL_MEMORY_AND_PHYSICAL_MEMORY.md  WOZMON_SERIAL_MONITOR.md  conversation.md  overview.md  qemu_io_documentation.md  serial-driver.md  serial-monitor-complete-guide.md
docs/archive/plans/: usb_keyboard_driver.ep0_control_transfer.design.md  usb_keyboard_driver.milestone0.md  usb_keyboard_driver.milestone1.md  usb_keyboard_driver.milestone3.md  usb_keyboard_driver.plan.md
docs/axioms/: arch-x86_64.md  boot.md  debug.md  memory.md
docs/plans/: boot-flow.md  cpu-platform-hardening.md  drivers-and-io.md  interrupts-and-platform.md  memory-inspect.md  memory.md  observability.md  outstanding-todos.md  phase1-cpu-platform.md  physical.plan.md  testing.md  x2apic-prep.md
kernel/: Cargo.toml
kernel/src/: allocator.rs  boot.rs  boot_services.rs  bootlogo.rs  config.rs  cpu.rs  cpu_features.rs  display.rs  environment.rs  framebuffer.rs  gdt.rs  handoff.rs  interrupts.rs  lib.rs  main.rs  memory.rs  monitor.rs  panic.rs  physical_memory.rs  serial_debug.rs  stack.rs
kernel/src/acpi/: madt.rs  mod.rs
kernel/src/drivers/: manager.rs  mod.rs  pci.rs  serial.rs  system.rs  traits.rs
kernel/src/drivers/usb/: handoff.rs  mod.rs
kernel/src/drivers/usb/xhci/: hid.rs  mod.rs  rings.rs  trb.rs
kernel/src/input/: keyboard.rs  mod.rs
kernel/src/interrupts/: apic.rs  calibration.rs  debug.rs  general_handler.rs  handlers.rs  irq_registry.rs  mod.rs  timer.rs
kernel/src/logging/: filter.rs  macros.rs  mod.rs  output.rs
kernel/src/memory/: dma.rs  dma_pool.rs  frame_allocator.rs  mapping.rs  page_table_builder.rs  page_tables.rs  runtime_mapper.rs  stack_alloc.rs  temporary_window.rs  va_alloc.rs
kernel/src/memory_inspect/: access.rs  error.rs  hexdump.rs  mod.rs  physical.rs  safety.rs
kernel/src/monitor/: mod.rs  parsing.rs
kernel/src/monitor/commands/: control.rs  cpu.rs  devices.rs  io.rs  memory.rs  mod.rs  pci.rs  system.rs  tables.rs  usb.rs
kernel/src/util/: README.md  example.rs  mod.rs  test_hexdump.rs
scripts/: gdb-auto.py  install-qemu-relays.sh  qemu_debugcon_logger.service  qemu_debugcon_relay.service  qemu_monitor_relay.service  qemu_qmp_relay.service  qemu_serial_relay.service  qmp-command.py  run_qemu_script.sh  tmux-qemu-live.sh
shared/: Cargo.toml
shared/src/: allocator.rs  constants.rs  handoff.rs  lib.rs  macros.rs  test_environments.rs
src/: acpi.rs  boot_sequence.rs  constants.rs  display.rs  handoff.rs  hardware.rs  main.rs  main_clean.rs  main_new.rs  qemu_exit.rs  system_info.rs
src/drivers/: manager.rs  qemu_debug.rs  raw_serial.rs  uefi_serial.rs
tests/: bare_metal_tests.rs  kernel_tests.rs  should_panic.rs
tools/theseus-qemu/: Cargo.toml
tools/theseus-qemu/src/: main.rs
