[workspace]
members = ["bootloader", "kernel", "shared"]
resolver = "2"

[workspace.dependencies]
log = "0.4"
acpi = "4.0"
uefi = { version = "0.35", default-features = false, features = ["alloc", "global_allocator"] }

[profile.dev]
panic = "abort"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
panic = "abort"