[package]
name = "theseus-bootloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "theseus_efi"
path = "src/main.rs"

[dependencies]
theseus-shared = { path = "../shared" }
uefi = { workspace = true }
log = { workspace = true }
acpi = { workspace = true }

# Release profile defined in workspace root
