[package]
name = "theseus-bootloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "theseus_efi"
path = "src/main.rs"

[dependencies]
theseus-shared = { path = "../shared" }
uefi = { workspace = true }
log = { workspace = true }
acpi = { workspace = true }
x86_64 = { workspace = true, optional = true, default-features = false, features = ["instructions"] }
spin = { workspace = true, optional = true }
volatile = { workspace = true, optional = true }
linked_list_allocator = { workspace = true, optional = true }
raw-cpuid = { workspace = true, optional = true }

[features]
default = ["new_arch"]
new_arch = [
    "x86_64",
    "spin",
    "volatile",
    "raw-cpuid",
]

# Release profile defined in workspace root
