[package]
name = "theseus-bootloader"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "theseus_efi"
path = "src/main.rs"

[dependencies]
theseus-shared = { path = "../shared" }
theseus-kernel = { path = "../kernel" }
uefi = { workspace = true }
log = { workspace = true }
acpi = { workspace = true }
x86_64 = { workspace = true, default-features = false, features = ["instructions"] }
spin = { workspace = true }
volatile = { workspace = true }
linked_list_allocator = { workspace = true }
raw-cpuid = { workspace = true }

# features removed; new_arch is unconditional now

# Release profile defined in workspace root
