[package]
name = "theseus-kernel"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
theseus-shared = { path = "../shared" }
log = { workspace = true }
acpi = { workspace = true }
uefi-raw = "0.1.0"
x86_64 = { workspace = true, default-features = false, features = ["instructions","inline_asm","abi_x86_interrupt"] }
spin = { workspace = true }
volatile = { workspace = true }
linked_list_allocator = { workspace = true }
raw-cpuid = { workspace = true }


# Release profile defined in workspace root

# features removed; new_arch is now default and unconditional

[lints.rust]
warnings = "deny"
